# LattesScraper

./: .gitignore  README.md  claudio_luis_de_camargo_penteado.xlsx  parse.ipynb  pyproject.toml  scrape.ipynb
