[project]
name = "scrapelattes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "instructor>=1.8.3",
    "ipykernel>=6.29.5",
    "lxml>=5.4.0",
    "playwright>=1.52.0",
    "polars[async,excel]>=1.30.0",
    "stamina>=25.1.0",
    "tqdm>=4.67.1",
]
